<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DividirABar</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="copiar">copiar</string>
    <string name="eliminar">eliminar</string>
    <string name="compartir">compartir</string>
    <string name="cortar">cortar</string>
    <string name="buscar">buscar</string>

</resources>
