<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >
     <!--La action Bar, la podemos definir como el menú, las distintas entradas
    del actionBar son Acciones normalmente se especifican en el xml pero tambien se 
    puede con código -->
   
   <!-- El atributo orderInCategory de 1 valor entero indica el orden de cada item,
    cuanto mas pequeño es el valor, mas a la izquierda sale.
    -showAsAction es el aributo que nos permite configurar la accion, podemos decir donde 
    queremos esta accion si con icono en la actionBar o con tetxo en el overflow como entrada
    Tiene distintos valores: always, never, withText, ifRoom es el mas común, se muestra en 
    la actionBar si se puede(normalmenete en horizontal caben ctrl+f11 en avd) -->
    <item
        android:id="@+id/menu_buscar"
        android:title="@string/buscar"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="30"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_cortar"
        android:title="@string/cortar"
        android:icon="@drawable/ic_action_cut"
        android:orderInCategory="40"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_copiar"
        android:title="@string/copiar"
        android:icon="@drawable/ic_action_copy"
        android:orderInCategory="50"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_eliminar"
        android:title="@string/eliminar"
        android:icon="@drawable/ic_action_delete"
        android:orderInCategory="60"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_compartir"
        android:title="@string/compartir"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="70"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
</menu>